# coursework

./: CMakeLists.txt  main.cpp  readme.md
CPP_SERVER/: CMakeLists.txt  grpc_server.cpp
CPP_SERVER/GRPC_CPP/: CMakeLists.txt  messages.grpc.pb.cc  messages.grpc.pb.h  messages.pb.cc  messages.pb.h
CPP_SERVER/include/: grpc_server.h
go_server_daemon/: build_proto.sh  go.mod  main.go
go_server_daemon/grpc/protobufs/: messages.pb.go  messages_grpc.pb.go
go_server_daemon/railway_grpc/: messages.pb.go  messages_grpc.pb.go
go_server_daemon/site/: 404.html  index.css  index.html  index.js
go_server_daemon/site/RailwayConsole/: console.css  console.html  console.js
go_server_daemon/site/TrainList/: trainlist.css  trainlist.html  trainlist.js
protobufs/: messages.proto
railway/: CMakeLists.txt  railway.cpp
railway/include/: railway.hpp
